nginx/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - nginx-gateway
  http:
    - route:
        - destination:
            host: nginx-service
            port:
              number: 80
          weight: 100
